GMM_Main/src/objects/CNCS_Corporate_Program__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It tells you whether the record is in active status or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNCS_Child_Program_Code__c</fullName>
        <formula>CNCS_Child_Program_Name__r.Code_Child__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Child Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Child_Program_Name1__c</fullName>
        <formula>CNCS_Child_Program_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Child Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Child_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Name</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>CNCS Child Programs</relationshipLabel>
        <relationshipName>CNCS_Corporate_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program_Code__c</fullName>
        <formula>CNCS_Corporate_Program_Name__r.Code_Corporate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Corporate Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program_Name1__c</fullName>
        <formula>CNCS_Corporate_Program_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Corporate Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is Child Program Name..but based on requirement I made it as  Program name and you will see two Program Name</description>
        <label>Program Name</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>CNCS Corporate Programs</relationshipLabel>
        <relationshipName>CNCS_Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Code__c</fullName>
        <formula>CNCS_Program_Name__r.Code_CNCS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Name1__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;Program&apos; , Name, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Name_2__c</fullName>
        <formula>CNCS_Program_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNCS Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNCS_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Program Name</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>CNCS Corporate Programs</relationshipLabel>
        <relationshipName>CNCS_Corporate_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Program Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CNCS_Corporate_Program__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Child Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>CNCS Corporate Structure (Child Program Name)</relationshipLabel>
        <relationshipName>CNCS_Corporate_Structure1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_CNCS__c</fullName>
        <description>4 digit char code for program name</description>
        <label>CNCS 4 Char Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Child__c</fullName>
        <description>Unique code for CNCS Child program</description>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Corporate__c</fullName>
        <description>Unique code for CNCS Corporate program</description>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Corporate_Programs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Programs</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CNCS Corporate Programs</relationshipLabel>
        <relationshipName>CNCS_Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CNCS_Corporate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the program</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>PM Module</label>
        <picklist>
            <picklistValues>
                <fullName>FGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Director_ID__r.FirstName &amp;&quot; &quot;&amp; Director_ID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <label>Short Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of the program</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line1__c</fullName>
        <description>Street number, street lane name</description>
        <label>Street Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line_2__c</fullName>
        <description>Apt/Building number</description>
        <label>Street Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Director_ID__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>CNCS Corporate Structure</label>
    <listViews>
        <fullName>Corporate_Programs</fullName>
        <columns>NAME</columns>
        <columns>Code_Corporate__c</columns>
        <columns>CNCS_Corporate_Program_Name__c</columns>
        <columns>Short_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CNCS_Corporate_Program__c.Corporate_Program</value>
        </filters>
        <label>Corporate Programs</label>
    </listViews>
    <listViews>
        <fullName>Programs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CNCS_Corporate_Program__c.Program</value>
        </filters>
        <label>Programs</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>CNCS Corporate Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CNCS Corporate Structure</pluralLabel>
    <recordTypes>
        <fullName>Child_Program</fullName>
        <active>true</active>
        <label>Child Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Program</fullName>
        <active>true</active>
        <label>Corporate Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <label>Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(Name) &gt; 10, RecordType.Name  = &apos;Program&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>CNCS Corporate Program Name Should be not more than 10 Characters</errorMessage>
    </validationRules>
</CustomObject>